tests/NormalTests/paczka1/fuzzy1/80240407.err
Error in line 1: BrOyu S21 4,7
Error in line 11: 0aItM0nBT4x S402 16,1
Error in line 13: 0aItM0nBT4x S503 59,9
Error in line 15: 0aItM0nBT4x S935 14,2
Error in line 14: S21 S503 75,4
Error in line 21: 6EmJG0O S935 38,2
Error in line 25: 6EmJG0O S402 64,6
Error in line 34: qcV27g S503 36,2
Error in line 35: 6EmJG0O S935 6,6
